[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "schemachange-sqlutil"
version = "0.1.0"
description = "A Schemachange plugin for SQL utilities"
authors = [
    { name = "Sam Nelson", email = "sam.nelson@siliconfuture.net" },
]
dependencies = [
    "sqlglot>=25.0",
    "networkx>=3.0",
    "schemachange"
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = { text = "MIT" }